@@ -1,5 +1,11 @@
 2007-11-04  Kohei Yoshida  <kyoshida@novell.com>
 
+	* source/ui/resmgr.cxx: set the current locale only after all string
+	data are loaded, instead of setting it every time string value is
+	queried.
+
+2007-11-04  Kohei Yoshida  <kyoshida@novell.com>
+
 	* source/inc/basedlg.hxx:
 	* source/ui/basedlg.cxx: added setFocus() method to manually set focus 
 	to the dialog, but this doesn't seem to work and no idea why.  also 
